Images output and titles

--- a/SegmentTress.ipynb
+++ b/SegmentTress.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Wellington, New Zealand (default)\n",
+    "# Ackland, New Zealand (default)\n",
     "latitude = -36.8900857\n",
     "longitude = 174.7591024\n",
     "zoom = 19\n",
@@ -124,6 +124,7 @@
     "    box_color='red',\n",
     "    title='Vegetation segmented with boxes',\n",
     "    blend=True,\n",
+    "    output='trees_with_boxes'\n",
     ")\n",
     "\n",
     "# Vegetation\n",
@@ -133,6 +134,7 @@
     "    add_boxes=False,\n",
     "    alpha=0.5,\n",
     "    title='Vegetation segmented without boxes',\n",
+    "    output='trees_greens'\n",
     ")\n",
     "\n",
     "# Positive and Negative\n",
@@ -143,7 +145,7 @@
     "    alpha=1,\n",
     "    title='Vegetation segmented grey scale',\n",
     "    blend=False,\n",
-    "    output='trees.tif',\n",
+    "    output='trees_greyscale.tif',\n",
     ")"
    ]
   }
